@@ -163,6 +163,10 @@ fieldset.paypal {
     overflow: hidden;
 }
 
+#vimperator-visualbell {
+    background-color: black;
+}
+
 .status_insecure, .status_insecure * {
     background-color: transparent;
 }
