@@ -102,7 +102,7 @@ the terms of any one of the MPL, the GPL or the LGPL.
                 </hbox>
 
                 <iframe id="vimperator-multiline-output" src="about:blank" flex="1" height="10px" hidden="false" collapsed="true"
-                        onkeypress="vimperator.commandline.onMultilineOutputEvent(event)"/>
+                    onkeypress="vimperator.commandline.onMultilineOutputEvent(event)"/>
 
                 <textbox id="vimperator-multiline-input" class="plain" flex="1" rows="10" hidden="false" collapsed="true" multiline="true"
                         onkeypress="vimperator.commandline.onMultilineInputEvent(event);"
@@ -116,6 +116,10 @@ the terms of any one of the MPL, the GPL or the LGPL.
            <key id="key_stop" keycode="VK_ESCAPE" oncommand="vimperator.events.onEscape();"/>
            <!-- other keys are handled inside vimperator.js event loop -->
         </keyset>
+
+        <!-- TODO: move to browser-stack? -->
+        <box id="vimperator-visualbell" hidden="true"/>
+
     </window>
 </overlay>
 
